crates/analyzer/tests/snapshots/errors__binary_op_add_uints.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The types for this operation must be equal
  ┌─ [snippet]:5:3
  │
5 │   a + b
  │   ^   ^


